--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
@@ -8,7 +9,6 @@
   "name": "hydrion-discord-bot",
   "version": "1.0.0",
   "main": "bot.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
